# aws-serverless-python-greetings

./: .gitignore  Makefile  README.md  docker-compose.yml  dynamoDB_Greeting.json  pyproject.toml  samconfig.toml  template.yaml
events/: event.json
greetings/: app.py
greetings-service/: add_to_greetings.py  list_greetings.py  requirements.txt
greetings-service/tests/unit/: test_add_to_greetings.py
layers/: shared.py
tests/unit/: test_handler.py
