[tool.poetry]
name = "awsprj1"
version = "0.1.0"
description = ""
authors = ["Vincent <vincent.dagoury@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.0"
requests = "^2.24.0"
boto3 = "^1.16.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
