[tool.poetry]
name = "aws-serverless-python-greetings"
version = "0.1.0"
description = "A simple server less project using AWS SAM, python 3.9 with poetry Function : say Greetings, but not all day long for you IP, using DynamoDB."
authors = ["vincedgy <vincent.dagoury@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.0"
requests = "^2.24.0"
boto3 = "^1.16.9"
aws-lambda-powertools = "^1.7.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-mock = "^3.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
